# rustyclicker

./: Cargo.toml
src/: main.rs
