[package]
name = "rustyclicker"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "RustyClicker"
identifier = "com.homanti.rustyclicker"

[dependencies]
iced = "0.14.0"
rdev = { git = "https://github.com/Narsil/rdev.git", branch = "main" }
rand = "0.10.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3
debug = false
